added typescript support download management

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,3 +43,11 @@
 body{
 	overflow: hidden;
 }
+.campaign-item {
+	.campaign-thumbnail-container {
+		position:static;
+	}
+	.campaign-item-details {
+		margin-left: 72px;
+	}
+}
