--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,26 @@
     background: rgba(255, 255, 255, 0.08);
 }
 
+progress[value] {
+	/* Reset the default appearance */
+	-webkit-appearance: none;
+	 appearance: none;
+	 border-radius: .25rem;
+	width: 100%;
+	height: 14px;
+  }
+
+progress[value]::-webkit-progress-bar {
+	background-color: #e9ecef;
+    border-radius: .25rem;
+  }
+
+progress[value]::-webkit-progress-value {
+	@extend .bg-success;
+	transition: width .2s ease;
+	border-radius: .25rem;
+}
+
 .top-bar{
 	background: rgb(37, 42, 58);
 	-webkit-app-region: drag;
