fixed bugs in the downloader

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,6 +64,7 @@ body{
 	overflow: hidden;
 }
 .campaign-item {
+	transition: background-color 0.25s, color 0.25s;
 	.campaign-thumbnail-container {
 		position:static;
 	}
