append to previous commit

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,3 +88,7 @@ progress[value]::-webkit-progress-value {
 	overflow: scroll;
 	max-height: 70vh;
 }
+
+.campaign-description img {
+	max-width: 100%;
+}
